--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,3 +26,17 @@ body {
 .instaIcon:hover {
     background: linear-gradient(135deg, #f9ce34, #ee2a7b, #6228d7);
 }
+
+.MuiBox-root .css-19kzrtu{
+    padding: 0 !important;
+}
+
+.css-1h9z7r5-MuiButtonBase-root-MuiTab-root.Mui-selected{
+    color: #000;
+}
+.css-10d9dml-MuiTabs-indicator{
+    background-color: #000;
+}
+.mui_tabs{
+    font-family: "Lato", sans-serif;
+}
