--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,16 +27,22 @@ body {
     background: linear-gradient(135deg, #f9ce34, #ee2a7b, #6228d7);
 }
 
-.MuiBox-root .css-19kzrtu{
+.MuiBox-root .css-19kzrtu {
     padding: 0 !important;
 }
 
-.css-1h9z7r5-MuiButtonBase-root-MuiTab-root.Mui-selected{
+.css-1h9z7r5-MuiButtonBase-root-MuiTab-root.Mui-selected {
     color: #000;
 }
-.css-10d9dml-MuiTabs-indicator{
+
+.css-10d9dml-MuiTabs-indicator {
     background-color: #000;
 }
-.mui_tabs{
+
+.mui_tabs {
     font-family: "Lato", sans-serif;
+}
+
+.collapse {
+    margin: 10px 0;
 }
