changed bg for opended topbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -94,6 +94,6 @@ body {
     background-color: #e74c3c;
     color: white;
   }
-  .css-168noda{
-    background-color: #fff !important;
+  .css-168noda, .css-vwd6ro{
+    background-color: #ffffff !important;
   }
