validation added for styling scrollbar for latest browsers

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,8 +61,28 @@ body {
   border-bottom: 1px solid #e6e6e6;
 }
 
+.css-12i7wg6-MuiPaper-root-MuiDrawer-paper::-webkit-scrollbar {
+  width: 8px;
+  /* Width of the scrollbar */
+}
+
+.css-12i7wg6-MuiPaper-root-MuiDrawer-paper::-webkit-scrollbar-track {
+  background: #fff;
+  /* Color of the track */
+}
+
+.css-12i7wg6-MuiPaper-root-MuiDrawer-paper::-webkit-scrollbar-thumb {
+  background: #888;
+  /* Color of the scrollbar */
+  border-radius: 3px;
+}
+
+.css-12i7wg6-MuiPaper-root-MuiDrawer-paper::-webkit-scrollbar-thumb:hover {
+  background: #555;
+  /* Color of the scrollbar on hover */
+}
 .css-12i7wg6-MuiPaper-root-MuiDrawer-paper {
-  max-height: 100vh;
+  scrollbar-width: thin; /* "auto" or "thin" */
 }
 
 .css-12i7wg6-MuiPaper-root-MuiDrawer-paper::-webkit-scrollbar {
@@ -99,7 +119,7 @@ body {
 .notificationDropdown::-webkit-scrollbar-thumb {
   background: #888;
   /* Color of the scrollbar */
-  border-radius: 3px;
+  border-radius: 2px;
 }
 
 .notificationDropdown::-webkit-scrollbar-thumb:hover {
